fixed overlapping title seperator

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ li:first-child:after {
   /*content: '|';*/
   /*content: '\000BB';*/ /* For » arrows */
   content: '';
-  border-right: 2px solid;
+  border-right: 1px solid;
   transition: border-right 50ms;
   margin-right: var(--spacing);
   
@@ -109,11 +109,11 @@ font-family: 'Drift';
 src: url('Drift.woff2') format('woff2'),
     url('Drift.woff') format('woff'),
     url('Drift.svg#Drift') format('svg');
+}
 body {
-  margin: 0;
+  margin 0;
   overflow-x: hidden;
   text-align: center;
-}
 }
 h1 {
   font-family: 'iron-on_blackletterregular';
@@ -147,7 +147,7 @@ a:hover, li {
 }
 
 li:after {
-  position: absolute;
+  position: relative;
   right: 0;
   height: 1em;
 }
